# godot_cpp_builder

./: .gitignore  README.md  compile.sh  godot_cpp_builder.cbp  godot_cpp_builder.depend  godot_cpp_builder.layout  register_types.cpp  register_types.hpp  t.txt  tests.h
purgatorium/: CMakeLists.txt  purgatorium.cpp  purgatorium.hpp
